tests/compiler/type_error/ir.disasm
Globals:

Function: f
block 0
  var return_value: void = None
  var x: float = None
  free(x)
  free(return_value)
  -> block 1

block 1
  -> return

Function: foo
block 0
  var return_value: string = None
  var x: void = None
  var temp2: {int/signed} = Some(MaybeSignedInt(3))
  x = temp2
  free(temp2)
  var y: void = None
  var temp4: {int/signed} = Some(MaybeSignedInt(2))
  y = temp4
  free(temp4)
  var z: void = None
  var temp6: void = None
  temp6 = x + y
  z = temp6
  free(temp6)
  var temp7: void = None
  var temp8: int = None
  var temp9: int = None
  var temp10: void = None
  var temp11: void = None
  temp11 = x
  temp10 = call f(temp11)
  temp7 = temp10
  free(temp11)
  free(temp10)
  free(temp9)
  free(temp8)
  free(temp7)
  return_value = z
  free(z)
  free(y)
  free(x)
  free(return_value)
  -> block 2

block 1
  -> return

block 2
  -> block 1

block 3
  -> block 1

